=========================================================================
CHANGE LOG
=========================================================================

Changes up to 1.00b04
    
    * python blocks

    * fixed formal charges & valences on nucleic acid backbone

    * fixed race condition in color querying

Changes up to 1.00b03

    * near_to selection operator

    * surface_carve_normal_cutoff setting

Changes up to 1.00b02

    * MOL2 fixes

    * CVS->SVN migration

    * preliminary sequence alignment objects (incomplete)

    * UTF8 support with two new fonts having Greek symbols

Changes up to 1.00b01

    * VMRL2 export with correct normals for all geometry except labels!

Changes up to 0.99rcX

    * one-button viewing mode

    * fixed 32-bit memory allocation bug

    * fixed selection argument to rotate command

    * fixed mview-based object animation loops

    * mol2 file reading fixes

    * single-molecule mol, mol2, sdf now not discrete by default.

    * parallel geometry builds

    * massive reworking of ramp_new for molecular objects

    * VRML2 support from Chris Want.

    * fixed button in benchmark wizard

Changes up to 0.99


    pre01

    * WARNING: One annoying GOTCHA!  Launch script "./pymol.com" is now
      just plain old "./pymol" -- sorry for the resulting config hassles.

    * Now running Python 2.4 on Windows, Linux, IRIX, and Solaris
      Mac remains at 2.3 in order to match built-in Mac OS X Python

    * fixed GUI bug in pmg/tk & added new alignment option for states.

    beta38

    * fixed field width bug in PDB writer

    beta37

    beta36

    * fetch no longer loads PDB as discrete

    beta35

    * MacPyMOL drag & drop fixes

    beta34

    * "fetch" command

    beta33

    * fixed SS assignment crash bug on Win32

    beta32

    * numerous minor PDB reading, threading, and cartoon glitches
      eliminated during validation phase

    * optimized PDB read performance 
