@@ -3,6 +3,8 @@ CHANGE LOG
 =========================================================================
 
 Changes up to 1.00b04
+
+    * fixed some cartoon drawing glitches
     
     * python blocks
 
